# infer_stack

./: AGENTS.md  README.md  manage.py  pyproject.toml
dev/: README.md
dev/benchmark-candidates/: README.md  index.md  questions.md
dev/journals/: claude.md
dev/lora/: LORA_PLAN.md
docs/: persistent-caches-and-warm-restarts.md  stack-graph-profiles.md
docs/demos/: ci_smoke_test.md  ollama_direct_quickstart.md  quickstart.md  qwen_3090_profiles.md  smollm2_gpu1_backend_switch.md
examples/: config.multi-model.yaml
examples/single-node/: README.md  config.yaml  models.yaml
infer_stack/: cli.py  config.py  docker_utils.py  env_utils.py  exporters.py  kubeai_ops.py  paths.py  validator.py  verification.py
infer_stack/backends/: compose_renderer.py  kubeai_renderer.py
infer_stack/experimental/: model_catalog_discover.py  model_memory_estimator.py  stress_test_long_context.py
infer_stack/templates/: default-vllm-models.yaml  docker-compose.yml.j2
recipies/: compose_pythia_inspect_mmlu_compat.md  compose_pythia_qwen36_mixed_4x96GB.md  compose_qwen35_122b_4x96GB.md  compose_qwen35_122b_fp8_4x96GB.md  compose_qwen36_35b_a3b_4x96GB.md
tests/: test_cli_setup.py  test_ollama_stack_graph.py  test_serving_profiles.py
vllm_service/: catalog.py  cli.py  cli_scfg.py  config.py  contracts.py  diff_prompt.py  docker_utils.py  env_utils.py  exporters.py  kubeai_ops.py  paths.py  profile_runtime.py  renderer.py  resolver.py  validator.py  verification.py
vllm_service/backends/: compose_renderer.py  kubeai_renderer.py
vllm_service/templates/: default-models.yaml  (+5 more)
