[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infer-stack"
version = "0.5.0"
description = "Profile-driven compose and KubeAI deployment compiler for inference stacks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "requests>=2.31",
  "rich>=13.0",
  "scriptconfig>=0.9",
  "ubelt>=1.3",
]

[project.optional-dependencies]
tests = [
  "pytest>=7.0",
  "pytest-codeblocks>=0.17",
]

[project.scripts]
infer-stack = "infer_stack.cli:main"

[tool.setuptools]
packages = ["infer_stack", "infer_stack.backends"]
include-package-data = true

[tool.setuptools.package-data]
infer_stack = ["templates/*.yaml", "templates/*.j2"]
